--- a/src/main.css
+++ b/src/main.css
@@ -41,7 +41,7 @@ body {
 }
 
 body:not(.modal) {
-    -webkit-user-select: none;
+    user-select: none;
 }
 
 noscript {
@@ -1600,6 +1600,12 @@ label input[type="checkbox"]:checked::before {
     left: 12px;
     transform: scale(0.75);
 
+    opacity: 0;
+
+    transition: opacity 0.1s;
+}
+
+.ui.embedded:hover a > .logo {
     opacity: 0.2;
 }
 
