--- a/src/main.css
+++ b/src/main.css
@@ -564,6 +564,8 @@ label.inline {
 }
 
 .label-input {
+    display: inline-block;
+    vertical-align: middle;
     width: 100%; height: 32px;
     padding: 4px 6px;
     padding-right: calc(24px + 6px);
@@ -589,6 +591,20 @@ label.inline {
     background: var(--ui-focus);
 
     color: black;
+}
+
+.label-input .ellipsis {
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+
+    background: red;
+
+    cursor: text;
+}
+
+.label-input .ellipsis.selected {
+    background: yellow;
 }
 
 .input-mode {
