Condense edge body options

--- a/src/main.css
+++ b/src/main.css
@@ -770,7 +770,7 @@ input[type="text"].flash {
     border-radius: 2px 2px 0 0;
 }
 
-.panel .vertical input[type="radio"]:last-of-type {
+.panel .vertical input[type="radio"]:not(.short):last-of-type {
     border-radius: 0 0 2px 2px;
 }
 
@@ -779,28 +779,21 @@ input[type="text"].flash {
     width: 50%;
     left: 0;
     transform: none;
+    /* To be honest, I'm not quite sure why the following is necessary, but it produces the right
+    effect on the browsers I tested on. */
+    margin-bottom: -3px;
 }
 
-.panel .vertical input[type="radio"].short + input[type="radio"].short {
+.panel .vertical input[type="radio"].short.start-of-line + input[type="radio"].short {
     border-left-width: 0;
 }
 
-.panel .vertical input[type="radio"].short:nth-last-of-type(2) {
-    border-radius: 0 0 0 2px;
-}
-
-.panel .vertical input[type="radio"].short:not(:nth-last-of-type(2)) + input[type="radio"].short {
-    border-radius: 0;
+.panel .vertical input[type="radio"].short.start-of-line:nth-last-of-type(2) {
+    border-bottom-left-radius: 2px;
 }
 
 .panel .vertical input[type="radio"].short:last-of-type {
-    border-radius: 0 0 2px 0;
-}
-
-input[type="radio"].short + input[type="radio"]:not(.short) {
-    /* To be honest, I'm not quite sure why this is necessary, but it produces the right effect on
-    the browsers I tested on. */
-    margin-top: -4px;
+    border-bottom-right-radius: 2px;
 }
 
 .panel input[type="radio"]:hover:not(:disabled):not(:active):not(:checked) {
