Use transparent body for embeds

--- a/src/main.css
+++ b/src/main.css
@@ -42,6 +42,10 @@ body {
     touch-action: none;
 }
 
+body.embedded {
+    background: transparent;
+}
+
 body:not(.modal) {
     user-select: none;
 }
